--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,3 +105,6 @@ add_executable(memory
 #dynamic
 add_executable(fibonacci src/dynamic-programming/fibonacci.c)
 add_executable(gridTraveller src/dynamic-programming/gridTraveller.c)
+
+add_executable(semaphore
+        src/semaphore.c)
